A more appropriate fix for RM1362 - horizontal scrolling of query results.

--- a/web/pgadmin/static/css/backgrid/backgrid-sizeable-columns.css
+++ b/web/pgadmin/static/css/backgrid/backgrid-sizeable-columns.css
@@ -6,6 +6,7 @@
  Licensed under the MIT @license.
  */
 table.backgrid {
+    overflow: hidden;
     position: relative;
 }
 
